# pypentair

./: README.md  demo.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  python-publish.yml
pypentair/: __init__.py  const.py  exceptions.py  pentair.py  utils.py
tests/: common.py  test_init.py  test_pentair.py  test_utils.py
