[tool.poetry]
name = "pypentair"
version = "0.0.0"
description = "Python package for interacting with Pentair Home devices"
authors = ["Nathan Spencer <natekspencer@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/natekspencer/pypentair"
repository = "https://github.com/natekspencer/pypentair"
keywords = ["Pentair", "Pentair Home", "salt level sensor", "python"]
include = ["pypentair/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.27.1"
pycognito = ">=2023.5,<2025.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4.1,<6.0"
pytest-timeout = "^2.1.0"
pytest-asyncio = ">=0.21,<0.25"
ruff = ">=0.5.0,<0.7"
tox = "^4.6.3"

[tool.poetry.group.demo.dependencies]
python-dotenv = "^1.0.0"
deepdiff = ">=6.3.1,<9.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle Warning
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "E501", # Line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
