[project]
name = "pypentair"
description = "Python package for interacting with Pentair Home devices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" }
]
keywords = ["Pentair", "Pentair Home", "salt level sensor", "python"]
dynamic = ["version"]
dependencies = [
    "boto3 (>=1.27.1)",
    "pycognito (>=2023.5)"
]

[project.urls]
Homepage = "https://github.com/natekspencer/pypentair"
Repository = "https://github.com/natekspencer/pypentair"

[tool.poetry]
version = "0.0.0"
include = ["pypentair/py.typed"]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.18.2,<2.0"
pytest = ">=9.0,<10.0"
pytest-asyncio = ">=1.3.0,<2.0"
pytest-cov = ">=7.0,<8.0"
pytest-timeout = ">=2.1,<3"
ruff = ">=0.14.4,<0.15"
tox = ">=4.32.0,<5.0"

[tool.poetry.group.demo.dependencies]
python-dotenv = "^1.2.1"
deepdiff = ">=6.3.1,<9.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle Warning
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "E501", # Line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
